background layout bug on mobile #15

--- a/css/styles.css
+++ b/css/styles.css
@@ -15,7 +15,8 @@ body {
   background-attachment: fixed;
   background-size: 100vw 100vh;
   font-family: pokemonFontSolid;
-  background-position: center;
+  transform: translate3d(0,0,0);
+-webkit-transform: translate3d(0,0,0);
 }
 
 .navbar {
